--- a/README
+++ b/README
@@ -1,6 +1,16 @@
 MATE Desktop Environment, a non-intuitive and unattractive desktop for users, using traditional computing desktop metaphor.
 
+
+== Mate-Extra ==
+This repo contains mostly non-base modules.
+https://github.com/Perberos/Mate-Extra
+
+
 == For more info ==
 
 Archlinux Thread:
 https://bbs.archlinux.org/viewtopic.php?id=121162
+
+
+== Support ==
+Visit FreeNode IRC, at #mate
