changing MarcoTheme for MetacityTheme

--- a/mate-user-docs/mate2-system-admin-guide/cs/cs.po
+++ b/mate-user-docs/mate2-system-admin-guide/cs/cs.po
@@ -2693,21 +2693,21 @@ msgstr "Zde je příklad indexového souboru motivu:"
 #, no-wrap
 msgid ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 msgstr ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[cs]=Velký vysoce kontrastní\n"
 "Name[es]=Alto contraste grande\n"
@@ -2716,10 +2716,10 @@ msgstr ""
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 
 #: C/system-admin-guide.xml:73(para)
@@ -2763,8 +2763,8 @@ msgid "Corresponds to the icons setting in the <application>Theme</application> 
 msgstr "Odpovídá nastavení ikon v nástroji předvoleb <application>Motiv</application>. Určuje, která nastavení ikon se použijí na panely a pozadí pracovní plochy."
 
 #: C/system-admin-guide.xml:150(literal)
-msgid "MarcoTheme"
-msgstr "MarcoTheme"
+msgid "MetacityTheme"
+msgstr "MetacityTheme"
 
 #: C/system-admin-guide.xml:154(para)
 msgid "Corresponds to the window frame setting in the <application>Theme</application> preference tool. Specifies which window frame setting option to apply to windows."
