--- a/mate-user-docs/mate2-system-admin-guide/el/el.po
+++ b/mate-user-docs/mate2-system-admin-guide/el/el.po
@@ -4405,31 +4405,31 @@ msgstr "Ακολουθεί ένα υπόδειγμα αρχείου ευρετη
 #, no-wrap
 msgid ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 msgstr ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 
 #: C/system-admin-guide.xml:73(para)
@@ -4501,8 +4501,8 @@ msgstr ""
 "στους πίνακες εφαρμογών και το παρασκήνιο της επιφάνειας εργασίας."
 
 #: C/system-admin-guide.xml:150(literal)
-msgid "MarcoTheme"
-msgstr "MarcoTheme"
+msgid "MetacityTheme"
+msgstr "MetacityTheme"
 
 #: C/system-admin-guide.xml:154(para)
 msgid ""
