--- a/mate-user-docs/mate2-system-admin-guide/it/it.po
+++ b/mate-user-docs/mate2-system-admin-guide/it/it.po
@@ -1506,7 +1506,7 @@ msgstr ""
 msgid "preference-key"
 msgstr "chiave-preferenza"
 
-# AHHH 
+# AHHH
 # uno è replaceable, l'altro è literal...
 #: C/system-admin-guide.xml:802(replaceable)
 #: C/system-admin-guide.xml:491(literal)
@@ -4233,31 +4233,31 @@ msgstr "Il seguente è un esempio di file indice di tema:"
 #, no-wrap
 msgid ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 msgstr ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Inverse\n"
 "Comment=White-on-black text and icons\n"
 "Name[it]=Forte contrasto, inverso\n"
 "Comment[it]=Bianco su nero per testo ed icone\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastInverse\n"
 "IconTheme=HighContrastInverse\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=Sans 10\n"
 
 #: C/system-admin-guide.xml:73(para)
@@ -4328,8 +4328,8 @@ msgstr ""
 "delle icone applicare a pannelli e sfondo della scrivania."
 
 #: C/system-admin-guide.xml:150(literal)
-msgid "MarcoTheme"
-msgstr "MarcoTheme"
+msgid "MetacityTheme"
+msgstr "MetacityTheme"
 
 #: C/system-admin-guide.xml:154(para)
 msgid ""
@@ -6616,7 +6616,7 @@ msgstr ""
 "possono richiedere l'inclusione dell'opzione <literal>-root</literal> per "
 "essere mostrati a schermo intero."
 
-# FIXME!!!! 
+# FIXME!!!!
 #
 # non dovrebbe essere <application>mate-screensaver</application> ??
 #: C/system-admin-guide.xml:59(para)
@@ -8364,7 +8364,7 @@ msgid "New Panel"
 msgstr "Nuovo pannello"
 
 # MATE-2-20
-# LAUNCH 
+# LAUNCH
 #
 # FIXME!! Non del tutto vero, rimane la voce "Avvia"
 #: C/system-admin-guide.xml:169(para)
@@ -9301,7 +9301,7 @@ msgstr ""
 msgid "Interoperable Object Reference"
 msgstr "Interoperable Object Reference"
 
-# non sono sicuro di 
+# non sono sicuro di
 #  Un_o_ IOR
 #  riferimento
 #
