--- a/mate-user-docs/mate2-system-admin-guide/ko/ko.po
+++ b/mate-user-docs/mate2-system-admin-guide/ko/ko.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: system-admin-guide\n"
@@ -2685,31 +2685,31 @@ msgstr "다음은 테마 인덱스 파일의 예제입니다:"
 #, no-wrap
 msgid ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 msgstr ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 
 #: C/system-admin-guide.xml:73(para)
@@ -2753,8 +2753,8 @@ msgid "Corresponds to the icons setting in the <application>Theme</application> 
 msgstr "<application>테마</application> 설정 도구의 아이콘 설정에 해당합니다. 패널과 데스크탑 바탕 화면에 적요되는 아이콘 설정 옵션을 지정합니다."
 
 #: C/system-admin-guide.xml:150(literal)
-msgid "MarcoTheme"
-msgstr "MarcoTheme"
+msgid "MetacityTheme"
+msgstr "MetacityTheme"
 
 #: C/system-admin-guide.xml:154(para)
 msgid "Corresponds to the window frame setting in the <application>Theme</application> preference tool. Specifies which window frame setting option to apply to windows."
