--- a/mate-user-docs/mate2-system-admin-guide/oc/oc.po
+++ b/mate-user-docs/mate2-system-admin-guide/oc/oc.po
@@ -3253,17 +3253,17 @@ msgstr ""
 #, no-wrap
 msgid ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 msgstr ""
 
@@ -3321,7 +3321,7 @@ msgid ""
 msgstr ""
 
 #: ../C/system-admin-guide.xml:150(literal)
-msgid "MarcoTheme"
+msgid "MetacityTheme"
 msgstr ""
 
 #: ../C/system-admin-guide.xml:154(para)
