--- a/mate-user-docs/mate2-system-admin-guide/pa/pa.po
+++ b/mate-user-docs/mate2-system-admin-guide/pa/pa.po
@@ -2209,8 +2209,8 @@ msgstr ""
 
 #: C/system-admin-guide.xml:59(programlisting)
 #, no-wrap
-msgid "[Desktop Entry]\nType=X-MATE-Metatheme\nName=High Contrast Large\nName[es]=Alto contraste grande\nComment=Large black-on-white text and icons\nComment[es]=Textos e iconos grandes en negro sobre blanco\nEncoding=UTF-8\n\n[X-MATE-Metatheme]\nGtkTheme=HighContrastLargePrint\nIconTheme=HighContrast\nMarcoTheme=Atlanta\nApplicationFont=sans 18\n"
-msgstr "[Desktop Entry]\nType=X-MATE-Metatheme\nName=High Contrast Large\nName[es]=Alto contraste grande\nComment=Large black-on-white text and icons\nComment[es]=Textos e iconos grandes en negro sobre blanco\nEncoding=UTF-8\n\n[X-MATE-Metatheme]\nGtkTheme=HighContrastLargePrint\nIconTheme=HighContrast\nMarcoTheme=Atlanta\nApplicationFont=sans 18\n"
+msgid "[Desktop Entry]\nType=X-GNOME-Metatheme\nName=High Contrast Large\nName[es]=Alto contraste grande\nComment=Large black-on-white text and icons\nComment[es]=Textos e iconos grandes en negro sobre blanco\nEncoding=UTF-8\n\n[X-GNOME-Metatheme]\nGtkTheme=HighContrastLargePrint\nIconTheme=HighContrast\nMetacityTheme=Atlanta\nApplicationFont=sans 18\n"
+msgstr "[Desktop Entry]\nType=X-GNOME-Metatheme\nName=High Contrast Large\nName[es]=Alto contraste grande\nComment=Large black-on-white text and icons\nComment[es]=Textos e iconos grandes en negro sobre blanco\nEncoding=UTF-8\n\n[X-GNOME-Metatheme]\nGtkTheme=HighContrastLargePrint\nIconTheme=HighContrast\nMetacityTheme=Atlanta\nApplicationFont=sans 18\n"
 
 #: C/system-admin-guide.xml:73(para)
 msgid "The following table describes the keys in theme index files:"
@@ -2253,8 +2253,8 @@ msgid "Corresponds to the icons setting in the <application>Theme</application> 
 msgstr ""
 
 #: C/system-admin-guide.xml:150(literal)
-msgid "MarcoTheme"
-msgstr "MarcoTheme"
+msgid "MetacityTheme"
+msgstr "MetacityTheme"
 
 #: C/system-admin-guide.xml:154(para)
 msgid "Corresponds to the window frame setting in the <application>Theme</application> preference tool. Specifies which window frame setting option to apply to windows."
