--- a/mate-user-docs/mate2-system-admin-guide/sv/sv.po
+++ b/mate-user-docs/mate2-system-admin-guide/sv/sv.po
@@ -2696,31 +2696,31 @@ msgstr "Följande är ett exempel på en temaindexfil:"
 #, no-wrap
 msgid ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 msgstr ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[sv]=Stor text med hög kontrast\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[sv]=Stor text och stora ikoner i svart och vitt\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 
 #: C/system-admin-guide.xml:73(para)
@@ -2764,8 +2764,8 @@ msgid "Corresponds to the icons setting in the <application>Theme</application> 
 msgstr "Motsvarar ikonerinställningen i inställningsverktyget <application>Tema</application>. Anger vilka ikonerinställningar som ska användas på paneler och skrivbordsbakgrund."
 
 #: C/system-admin-guide.xml:150(literal)
-msgid "MarcoTheme"
-msgstr "MarcoTheme"
+msgid "MetacityTheme"
+msgstr "MetacityTheme"
 
 #: C/system-admin-guide.xml:154(para)
 msgid "Corresponds to the window frame setting in the <application>Theme</application> preference tool. Specifies which window frame setting option to apply to windows."
