--- a/mate-user-docs/mate2-system-admin-guide/eu/eu.po
+++ b/mate-user-docs/mate2-system-admin-guide/eu/eu.po
@@ -4135,31 +4135,31 @@ msgstr "Gaien indize-fitxategi baten lagina da hau:"
 #, no-wrap
 msgid ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 msgstr ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[eu]=Testu eta ikono handiak, beltza zuriaren gainean\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 
 #: C/system-admin-guide.xml:73(para)
@@ -4228,8 +4228,8 @@ msgstr ""
 "aplikatu behar zaien zehazten du."
 
 #: C/system-admin-guide.xml:150(literal)
-msgid "MarcoTheme"
-msgstr "MarcoTheme"
+msgid "MetacityTheme"
+msgstr "MetacityTheme"
 
 #: C/system-admin-guide.xml:154(para)
 msgid ""
