--- a/mate-user-docs/mate2-system-admin-guide/fr/fr.po
+++ b/mate-user-docs/mate2-system-admin-guide/fr/fr.po
@@ -4228,31 +4228,31 @@ msgstr "Voici un exemple de fichier d'index de thème :"
 #, no-wrap
 msgid ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[es]=Alto contraste grande\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[es]=Textos e iconos grandes en negro sobre blanco\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 msgstr ""
 "[Desktop Entry]\n"
-"Type=X-MATE-Metatheme\n"
+"Type=X-GNOME-Metatheme\n"
 "Name=High Contrast Large\n"
 "Name[fr]=Contraste élevé, grande taille\n"
 "Comment=Large black-on-white text and icons\n"
 "Comment[fr]=Grand texte et grandes icônes en noir sur fond blanc\n"
 "Encoding=UTF-8\n"
 "\n"
-"[X-MATE-Metatheme]\n"
+"[X-GNOME-Metatheme]\n"
 "GtkTheme=HighContrastLargePrint\n"
 "IconTheme=HighContrast\n"
-"MarcoTheme=Atlanta\n"
+"MetacityTheme=Atlanta\n"
 "ApplicationFont=sans 18\n"
 
 #: C/system-admin-guide.xml:73(para)
@@ -4324,8 +4324,8 @@ msgstr ""
 "bureau."
 
 #: C/system-admin-guide.xml:150(literal)
-msgid "MarcoTheme"
-msgstr "MarcoTheme"
+msgid "MetacityTheme"
+msgstr "MetacityTheme"
 
 #: C/system-admin-guide.xml:154(para)
 msgid ""
