adding QB on README

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 MATE Desktop Environment, a non-intuitive and unattractive desktop for users, using traditional computing desktop metaphor.
 
+／人◕ ‿‿ ◕人＼ < Is your wish
 
 == Mate-Extra ==
 This repo contains mostly non-base modules.
