actualizando numero de version

--- a/mate-control-center/TODO
+++ b/mate-control-center/TODO
@@ -66,7 +66,7 @@ GENERAL:
 
 GOING FORWARD:
 
-Hardware Integration 
+Hardware Integration
  - hwbrowser??? Kde has one; should we?
  - peripherals (RH only?)
  - gphoto/sane/cd burning??  Userland hw.
@@ -86,7 +86,7 @@ Workspace/Tasks
  - Maybe something else?
 
 Identification Capplet
- - GDM screen
+ - MDM screen
  - Mail capplet
 
 Password Capplet?
@@ -95,7 +95,7 @@ Password Capplet?
 Themes and Appearance:
  - blah
 
-Sound: 
+Sound:
  - blah
 
 Bugzilla
