cambiando gdm a mdm y actualizando el numero de version

--- a/mate-session-manager/doc/man/mate-session.1
+++ b/mate-session-manager/doc/man/mate-session.1
@@ -11,7 +11,7 @@ mate-session \- Start the MATE desktop environment
 .SH DESCRIPTION
 The \fImate-session\fP program starts up the MATE desktop
 environment. This command is typically executed by your login manager
-(either gdm, xdm, or from your X startup scripts). It will load
+(either mdm, xdm, or from your X startup scripts). It will load
 either your saved session, or it will provide a default session for the
 user as defined by the system administrator (or the default MATE
 installation on your system).
