adding ubuntu thread link on readme

--- a/README
+++ b/README
@@ -12,6 +12,9 @@ https://github.com/Perberos/Mate-Extra
 Archlinux Thread:
 https://bbs.archlinux.org/viewtopic.php?id=121162
 
+Ubuntu Thread:
+http://ubuntuforums.org/showthread.php?p=11333073
+
 
 == Support ==
 Visit FreeNode IRC, at #mate
