fix link on readme (http://ubuntuforums.org/showpost.php?p=11336075&postcount=21)

--- a/mate-session-manager/mate-session/README
+++ b/mate-session-manager/mate-session/README
@@ -1,4 +1,4 @@
-See also http://live.mate.org/SessionManagement/NewMateSession
+See also http://live.gnome.org/SessionManagement/NewGnomeSession
 
 Startup
 -------
