fix email name  (http://ubuntuforums.org/showpost.php?p=11336075&postcount=21)

--- a/mate-session-manager/AUTHORS
+++ b/mate-session-manager/AUTHORS
@@ -1,11 +1,11 @@
 new code base authors
 ---------------------
 
-Dan Winship <danw@mate.org>
-Lucas Rocha <lucasr@mate.org>
+Dan Winship <danw@gnome.org>
+Lucas Rocha <lucasr@gnome.org>
 William Jon McCann <jmccann@redhat.com>
 
-original mate-session authors
+original gnome-session authors
 ------------------------------
 
 Tom Tromey <tromey@cygnus.com>
