--- a/README
+++ b/README
@@ -2,12 +2,19 @@ MATE Desktop Environment, a non-intuitive and unattractive desktop for users, us
 
 ／人◕ ‿‿ ◕人＼ < Is your wish
 
+This is the base repository with mostly modules to get a minimal working desktop.
+Please, see the follow list with others modules and program.
+
+
 == Mate-Extra ==
 This repo contains mostly non-base modules.
 https://github.com/Perberos/Mate-Extra
 
+https://github.com/perberos/mate-terminal The MATE Terminal Emulator 
+https://github.com/perberos/mate-screensaver Screensaver for Mate Desktop Environment 
 
-== For more info ==
+
+== Distro threads ==
 
 Archlinux Thread:
 https://bbs.archlinux.org/viewtopic.php?id=121162
@@ -18,3 +25,4 @@ http://ubuntuforums.org/showthread.php?p=11333073
 
 == Support ==
 Visit FreeNode IRC, at #mate
+Do not forget the galletitas.
