adding more links on readme

--- a/README
+++ b/README
@@ -10,8 +10,10 @@ Please, see the follow list with others modules and program.
 This repo contains mostly non-base modules.
 https://github.com/Perberos/Mate-Extra
 
-https://github.com/perberos/mate-terminal The MATE Terminal Emulator 
-https://github.com/perberos/mate-screensaver Screensaver for Mate Desktop Environment 
+https://github.com/perberos/mate-terminal The MATE Terminal Emulator
+https://github.com/perberos/mate-screensaver Screensaver for Mate Desktop Environment
+https://github.com/perberos/mate-text-editor An powerfull text editor for MATE
+https://github.com/perberos/mate-screensaver Screensaver for MATE
 
 
 == Distro threads ==
