--- a/README
+++ b/README
@@ -14,7 +14,7 @@ https://github.com/perberos/mate-terminal The MATE Terminal Emulator
 https://github.com/perberos/mate-screensaver Screensaver for Mate Desktop Environment
 https://github.com/perberos/mate-text-editor An powerfull text editor for MATE
 https://github.com/perberos/mate-screensaver Screensaver for MATE
-
+https://github.com/perberos/mate-calc Calculator with financial and scientific modes
 
 == Distro threads ==
 
