--- a/README
+++ b/README
@@ -15,6 +15,9 @@ https://github.com/perberos/mate-screensaver Screensaver for Mate Desktop Enviro
 https://github.com/perberos/mate-text-editor An powerfull text editor for MATE
 https://github.com/perberos/mate-screensaver Screensaver for MATE
 https://github.com/perberos/mate-calc Calculator with financial and scientific modes
+https://github.com/perberos/mate-system-monitor A system monitor for MATE
+https://github.com/perberos/mate-document-viewer Simply a document viewer for MATE
+https://github.com/perberos/mate-file-archiver A file archiver for MATE
 
 == Distro threads ==
 
