--- a/README
+++ b/README
@@ -18,14 +18,20 @@ https://github.com/perberos/mate-calc Calculator with financial and scientific m
 https://github.com/perberos/mate-system-monitor A system monitor for MATE
 https://github.com/perberos/mate-document-viewer Simply a document viewer for MATE
 https://github.com/perberos/mate-file-archiver A file archiver for MATE
+https://github.com/perberos/mate-system-tools A system tools for MATE
 
 == Distro threads ==
 
 Archlinux Thread:
 https://bbs.archlinux.org/viewtopic.php?id=121162
 
+LinuxMint Thread:
+http://forums.linuxmint.com/viewtopic.php?t=86481
+
 Ubuntu Thread:
 http://ubuntuforums.org/showthread.php?p=11333073
+
+(urls are fixed width! yay)
 
 
 == Support ==
