--- a/README
+++ b/README
@@ -1,15 +1,27 @@
-MATE Desktop Environment, a non-intuitive and unattractive desktop for users, using traditional computing desktop metaphor.
+  MATE Desktop Environment, a non-intuitive and unattractive desktop for users,
+  using traditional computing desktop metaphor.
 
-／人◕ ‿‿ ◕人＼ < Is your wish
+  ／人◕ ‿‿ ◕人＼ < Your wish
 
-This is the base repository. THere are only tools and script to do some tasks.
-Please, see the follow list with modules and program.
+  This is the base repository. THere are only tools and script to do some tasks.
+  Please, see the follow list with modules and program.
 
 * How to install
 
   Install it from your distro repository.
 
+* How I can get whole source code?
 
+  Clone this repository using this command in your terminal
+    
+    $ git clone git@github.com:perberos/Mate-Desktop-Environment.git mate
+  
+  When git cloning finish, run the clone-base.sh script
+    
+    $ cd mate; sh clone-base.sh
+
+  Done.
+  
 * Package links
 
 
