adding clone and pull for base

--- a/README
+++ b/README
@@ -19,11 +19,22 @@
   When git cloning finish, run the clone-base.sh script
     
     $ cd mate; sh clone-base.sh
+   
+  Now with the others.
+  
+    $ cd mate; sh clone-extra.sh
 
   Done.
   
+  
+* Which is the difference with base and extra?
+  
+  The base is the minimal requirement to get a working desktop. Without any
+  aditional.
+  The extra includes the most used applications, like image viewer, terminal,
+  text editor, screensaver, and a lot of tools.
+  
 * Package links
-
 
   * mate base
 
