--- a/README
+++ b/README
@@ -38,56 +38,56 @@
 
   * mate base
 
-    https://github.com/perberos/libmate
-    https://github.com/perberos/libmatecanvas
-    https://github.com/perberos/libmatecomponent
-    https://github.com/perberos/libmatecomponentui
-    https://github.com/perberos/libmatekbd
-    https://github.com/perberos/libmatekeyring
-    https://github.com/perberos/libmatenotify
-    https://github.com/perberos/libmateui
-    https://github.com/perberos/libmateweather
-    https://github.com/perberos/mate-backgrounds
-    https://github.com/perberos/mate-common
-    https://github.com/perberos/mate-conf
-    https://github.com/perberos/mate-control-center
-    https://github.com/perberos/mate-corba
-    https://github.com/perberos/mate-desktop
-    https://github.com/perberos/mate-dialogs
-    https://github.com/perberos/mate-doc-utils
-    https://github.com/perberos/mate-file-manager
-    https://github.com/perberos/mate-icon-theme
-    https://github.com/perberos/mate-keyring
-    https://github.com/perberos/mate-menus
-    https://github.com/perberos/mate-mime-data
-    https://github.com/perberos/mate-notification-daemon
-    https://github.com/perberos/mate-panel
-    https://github.com/perberos/mate-polkit
-    https://github.com/perberos/mate-session-manager
-    https://github.com/perberos/mate-settings-daemon
-    https://github.com/perberos/mate-vfs
-    https://github.com/perberos/mate-window-manager
+    https://github.com/mate-desktop/libmate
+    https://github.com/mate-desktop/libmatecanvas
+    https://github.com/mate-desktop/libmatecomponent
+    https://github.com/mate-desktop/libmatecomponentui
+    https://github.com/mate-desktop/libmatekbd
+    https://github.com/mate-desktop/libmatekeyring
+    https://github.com/mate-desktop/libmatenotify
+    https://github.com/mate-desktop/libmateui
+    https://github.com/mate-desktop/libmateweather
+    https://github.com/mate-desktop/mate-backgrounds
+    https://github.com/mate-desktop/mate-common
+    https://github.com/mate-desktop/mate-conf
+    https://github.com/mate-desktop/mate-control-center
+    https://github.com/mate-desktop/mate-corba
+    https://github.com/mate-desktop/mate-desktop
+    https://github.com/mate-desktop/mate-dialogs
+    https://github.com/mate-desktop/mate-doc-utils
+    https://github.com/mate-desktop/mate-file-manager
+    https://github.com/mate-desktop/mate-icon-theme
+    https://github.com/mate-desktop/mate-keyring
+    https://github.com/mate-desktop/mate-menus
+    https://github.com/mate-desktop/mate-mime-data
+    https://github.com/mate-desktop/mate-notification-daemon
+    https://github.com/mate-desktop/mate-panel
+    https://github.com/mate-desktop/mate-polkit
+    https://github.com/mate-desktop/mate-session-manager
+    https://github.com/mate-desktop/mate-settings-daemon
+    https://github.com/mate-desktop/mate-vfs
+    https://github.com/mate-desktop/mate-window-manager
 
 
   * mate extra
 
-    https://github.com/perberos/mate-text-editor An powerfull text editor for MATE
-    https://github.com/perberos/mate-terminal The MATE Terminal Emulator
-    https://github.com/perberos/mate-image-viewer
-    https://github.com/perberos/mate-document-viewer Simply a document viewer for MATE
-    https://github.com/perberos/mate-file-archiver A file archiver for MATE
-    https://github.com/perberos/mate-calc Calculator with financial and scientific modes
-    https://github.com/perberos/mate-screensaver Screensaver for MATE
+    https://github.com/mate-desktop/mate-text-editor An powerfull text editor for MATE
+    https://github.com/mate-desktop/mate-terminal The MATE Terminal Emulator
+    https://github.com/mate-desktop/mate-image-viewer
+    https://github.com/mate-desktop/mate-document-viewer Simply a document viewer for MATE
+    https://github.com/mate-desktop/mate-file-archiver A file archiver for MATE
+    https://github.com/mate-desktop/mate-calc Calculator with financial and scientific modes
+    https://github.com/mate-desktop/mate-screensaver Screensaver for MATE
 
-    https://github.com/perberos/mate-themes
-    https://github.com/perberos/mate-applets
-    https://github.com/perberos/mate-backgrounds
-    https://github.com/perberos/mate-bluetooth
-    https://github.com/perberos/mate-power-manager
-    https://github.com/perberos/mate-system-monitor A system monitor for MATE
-    https://github.com/perberos/mate-system-tools A system tools for MATE
+    https://github.com/mate-desktop/mate-themes
+    https://github.com/mate-desktop/mate-applets
+    https://github.com/mate-desktop/mate-backgrounds
+    https://github.com/mate-desktop/mate-bluetooth
+    https://github.com/mate-desktop/mate-power-manager
+    https://github.com/mate-desktop/mate-system-monitor A system monitor for MATE
+    https://github.com/mate-desktop/mate-system-tools A system tools for MATE
 
-    https://github.com/perberos/mate-display-manager
+    https://github.com/mate-desktop/mate-display-manager
 
 * Distro threads
 
