--- a/README
+++ b/README
@@ -14,7 +14,7 @@
 
   Clone this repository using this command in your terminal
     
-    $ git clone git@github.com:perberos/Mate-Desktop-Environment.git mate
+    $ git clone git@github.com:perberos/Mate-Desktop-Environment.git mate --depth=1
   
   When git cloning finish, run the clone-base.sh script
     
