adding link to mate-conf-editor (https://github.com/perberos/Mate-Desktop-Environment/issues/71)

--- a/README
+++ b/README
@@ -89,6 +89,8 @@
 
     https://github.com/mate-desktop/mate-display-manager
 
+    https://github.com/mate-desktop/mate-conf-editor MateConf editor
+
 * Distro threads
 
   Archlinux Thread:
