changed clone-base to base-clone and clone-extra to extra-clone to match filenames downloaded.

--- a/README
+++ b/README
@@ -18,11 +18,11 @@
   
   When git cloning finish, run the clone-base.sh script
     
-    $ cd mate; sh clone-base.sh
+    $ cd mate; sh base-clone.sh
    
   Now with the others.
   
-    $ cd mate; sh clone-extra.sh
+    $ cd mate; sh extra-clone.sh
 
   Done.
   
